test-data/compiletest-rs/ui/test-attrs/test-runner-hides-start.mir
// WARNING: This output format is intended for human consumers only
// and is subject to change without notice. Knock yourself out.
fn start(_1: isize, _2: *const *const u8) -> isize {
    let mut _0: isize;
    let mut _3: !;

    bb0: {
        _3 = begin_panic::<&str>(const "explicit panic");
    }
}
